--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -1,14 +1,15 @@
-<% if @shopping_cart.products.empty? %>
+<hr class = 'nav-padding'/>
+<% if @cart.products.empty? %>
   <%= render 'empty'%>
 <% else %>
   <div class = 'container-fluid'>
     <div class = 'row-fluid'>
-      <div class = 'col-sm-10'>
+      <div class = 'col-sm-10 product-summary-container'>
         <%= render 'products_summary' %>
       </div>
-      <div class = 'col-sm-2 shopping-cart-summary text-center' data-spy="affix" data-offset-top="60" data-offset-bottom="200">
-        <h4> Subtotal (<%= pluralize(@shopping_cart.products.count, 'item') %>): $<%= @total_cost %></h4>
-        <%= link_to 'Check Out', checkout_path, :shopping_cart => @shopping_cart, class: 'btn btn-primary' %>
+      <div class = 'col-sm-2 shopping-cart-summary text-center' data-spy="affix" data-offset-top="105" data-offset-bottom="200">
+        <h4> Subtotal (<%= pluralize(@cart.products.count, 'item') %>): $<%= @total_cost %></h4>
+        <%= link_to 'Check Out', checkout_path, :shopping_cart => @cart, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
