--- a/app/assets/stylesheets/shopping_cart.css.scss
+++ b/app/assets/stylesheets/shopping_cart.css.scss
@@ -55,11 +55,10 @@
 }
 .product-summary{
   padding-top: 10px;
-  p{
-    color: white;
-  }
-  a{
-    color: #2a6496;
+  color: #2a6496;
+  select{
+    color: black;
+    background-color: gainsboro;
   }
 }
 
