--- a/app/views/base_models/delete_picture.js.erb
+++ b/app/views/base_models/delete_picture.js.erb
@@ -1,4 +1,5 @@
 $('#pictures').html("<%= j (render 'base_models/pictures/edit') %>");
+console.log('hello');
 $('.gallery-thumbnail').click(function(){
   $('.image-active').empty();
   $('.image-active').append($(this).clone().toggleClass('thumbnail gallery-thumbnail'));
