--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,5 @@
+TODO
+<!-- TODO
 <hr class = 'nav-padding'/>
 <div class = 'container product-title'>
   <h2> <%= best_in_place @product, :name %> </h2>
@@ -24,3 +26,4 @@
     </div>
   </div>
 </div>
+ -->
