--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
+    <%= render 'layouts/messages' %>
     <%= render 'layouts/nav' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
