--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,7 +2,8 @@
 <div class = 'container product-title'>
   <h2> <%= @base_model.name %> </h2>
   <% if current_user.try(:has_role?, :admin) %>
-    <%= link_to "Edit", edit_base_model_path(@base_model), class: 'btn btn-small btn-success'%>
+    <%= link_to "Edit", edit_base_model_path(@base_model), class: 'btn btn-small btn-primary'%>
+    <%= link_to "Delete", base_model_path(@base_model), method: 'delete', class: 'btn btn-small btn-danger'%>
   <% end %>
   <p> <%= @base_model.description %> </p>
   <hr />
