--- a/app/assets/stylesheets/shopping_cart.css.scss
+++ b/app/assets/stylesheets/shopping_cart.css.scss
@@ -4,6 +4,7 @@
   margin-bottom: -15px;
   padding-top: 20vh;
   padding-bottom: 20px;
+  background-repeat: no-repeat;
   @media(min-width: 992px){
     font-size: 10em;
   }
