--- a/app/assets/stylesheets/_nav.css.scss
+++ b/app/assets/stylesheets/_nav.css.scss
@@ -35,13 +35,12 @@ nav.navbar-default{
     &:focus, &:hover{
       border-radius: 2px 2px 0px 0px;
       border: 1px solid rgba(0, 0, 0, 0.15);
-      border-bottom: 1px solid transparent;
     }
   }
 
 }
 
-.nav > li:last-child:hover{
+.nav > li:last-child:hover, .nav > li:nth-last-child(2):hover{
   border-bottom: 1px solid rgba(0,0,0,0.15);
 }
 
