--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -12,8 +12,8 @@
   </div>
   <div class = 'row-fluid hidden-xs'>
     <div class = 'col-xs-12'>
-      <table id='parts' class = 'table table-hover display dataTable table-bordered dtr-inline' data-source = '/parts.json?pageWidth=xs'>
-      </table>
+      <!-- TODO - this is an idea for responsive-ness      <table id='parts' class = 'table table-hover display dataTable table-bordered dtr-inline' data-source = '/parts.json?pageWidth=xs'>
+      </table> -->
     </div>
   </div>
 </div>
