--- a/app/views/shopping_carts/_products_summary.html.erb
+++ b/app/views/shopping_carts/_products_summary.html.erb
@@ -9,10 +9,10 @@
       <span> <%= link_to 'Remove', product, remote: true, method: :delete %> </span>
     </div>
     <div class = 'col-sm-2'><!-- Price -->
-      <span> $<%= product.quantity * product.price %>  </span>
+      <span> $<%= '%.02f' % (product.quantity * product.price) %>  </span>
       <% if product.quantity > 1 %>
         <br />
-        <span>(<%= product.quantity %> @ $<%= product.price %>) </span>
+        <span>(<%= product.quantity %> @ $<%= '%.02f' % product.price %>) </span>
       <% end %>
     </div>
     <div class = 'col-sm-2'><!-- Qty -->
