--- a/app/assets/stylesheets/shopping_cart.css.scss
+++ b/app/assets/stylesheets/shopping_cart.css.scss
@@ -69,3 +69,30 @@
   padding-bottom: 10px;
   margin-top: 10px;
 }
+
+.fake-select{
+  cursor: pointer;
+  color: black;
+  background-color: #DCD9D9;
+  width: 54px;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  display:inline-flex;
+  .product-quantity{
+    padding-left: 4px;
+    display:inline;
+    form select{
+      &:focus{
+        border: none;
+        outline: none;
+    }}
+  }
+  .caret-container{
+    display:inline;
+    padding-left: 20px;
+    .fa{
+      height: 7px;
+      display: block;
+    }
+  }
+}
