--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -8,7 +8,7 @@
         <%= render 'products_summary' %>
       </div>
       <div class = 'col-sm-2 shopping-cart-summary text-center' data-spy="affix" data-offset-top="105" data-offset-bottom="200">
-        <h4> Subtotal (<%= pluralize(@cart.products.count, 'item') %>): $<%= '%.02f' % @total_cost %></h4>
+        <%= render 'cart_subtotal' %>
         <%= link_to 'Check Out', checkout_path, :shopping_cart => @cart, class: 'btn btn-primary' %>
       </div>
     </div>
