tweaks to landing page

--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,5 +1,9 @@
-<div class = 'hero-carousel'>
-<%= render 'layouts/carousel' %>
+<center class='landing-heading hidden-xs'>
+  <h1>Boats With Character</h1>
+  <h3>Custom handmade fiberglass boats</h3>
+</center>
+<div class = 'hero-carousel landing'>
+  <%= render 'layouts/carousel' %>
 </div>
 <div class = 'text-center' >
   <h2> Proudly Made in the United States </h2>
