--- a/app/assets/stylesheets/_home.css.scss
+++ b/app/assets/stylesheets/_home.css.scss
@@ -7,6 +7,23 @@ $gallery-picture-width: 520px;
   }
 }
 
+.landing-heading{
+  h1, h3{
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #023C6F;
+  }
+  h1{ font-size: 5em; }
+  h3{  font-weight: 800; }
+  margin-bottom: -140px;
+  z-index: 1;
+  @media(max-width: 991px) and (min-width: 768px){
+    margin-bottom: -110px;
+    h1{
+      font-size: -webkit-xxx-large;
+    }
+  }
+}
+
 .gallery-option {
   img {
     height: 33vw;
