--- a/app/assets/stylesheets/thumbnail_slider.css.scss
+++ b/app/assets/stylesheets/thumbnail_slider.css.scss
@@ -31,6 +31,15 @@
     left: 100%;
     -webkit-transition: all 0.2s ease-in-out;
   }
+  &.landing{
+    position: relative;
+    z-index: -1;
+    @media(max-width: 991px) and (min-width: 768px){
+      img{
+        opacity: 0.6;
+      }
+    }
+  }
 }
 
 
