clean up image carousels

--- a/app/views/boats/barges/index.html.erb
+++ b/app/views/boats/barges/index.html.erb
@@ -1,5 +1,9 @@
 <div class = 'hero-carousel'>
-<%= render 'layouts/carousel' %>
+  <div class="carousel-inner" role="listbox">
+    <div class='item active'>
+      <%= image_tag 'barges/riverboats/riverboat_side_view.jpg' %>
+    </div>
+  </div>
 </div>
 <div class = 'text-center' >
   <h2> Proudly Made in the United States </h2>
