--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,5 +1,9 @@
 <div class = 'boat-gallery-carousel' >
-<%= render 'layouts/carousel.html.erb' %>
+  <div class="carousel-inner" role="listbox">
+    <div class='item active'>
+      <%= image_tag 'flamingoes_landing.png' %>
+    </div>
+  </div>
 </div>
 <div class = 'container boat-gallery-container'>
   <div class = 'row-fluid thumbnail-carousel'>
