--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -3,7 +3,11 @@
   <h3>Custom handmade fiberglass boats</h3>
 </center>
 <div class = 'hero-carousel landing'>
-  <%= render 'layouts/carousel' %>
+  <div class="carousel-inner" role="listbox">
+    <div class='item active'>
+      <%= image_tag 'paddleboats/landing_hero.png' %>
+    </div>
+  </div>
 </div>
 <div class = 'text-center' >
   <h2> Proudly Made in the United States </h2>
