--- a/app/views/checkout/show.html.erb
+++ b/app/views/checkout/show.html.erb
@@ -1,5 +1,5 @@
 <hr class = 'nav-padding' />
-<div class = 'row-centered gray-field'>
+<div class = 'row-centered boat-background'>
 <div class = 'col-centered col-xs-12 col-sm-6 registration-form'>
   <div class = 'row'>
     <% if current_user.nil? %>
